objects/Value_Delivery_Key_Participants__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participant_Type__c</fullName>
        <label>Participant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Blended Core Team</fullName>
                </value>
                <value>
                    <fullName>Accenture Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Outcomes__c</fullName>
        <label>Session Outcomes</label>
        <referenceTo>Value_Delivery_Session_Outcomes__c</referenceTo>
        <relationshipLabel>Value Delivery Key Participants</relationshipLabel>
        <relationshipName>Value_Delivery_Key_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Value Delivery Key Participants</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Value Delivery Key Participants  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Delivery Key Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>